roles/egw/files/authserver.yml

apiVersion: v1
kind: Namespace
metadata:
  name: epicauth
  labels:
    app.kubernetes.io/part-of: projectcontour

---
apiVersion: cert-manager.io/v1
kind: Issuer
metadata:
  name: selfsigned
  namespace: epicauth
spec:
  selfSigned: {}

---
apiVersion: cert-manager.io/v1
kind: Certificate
metadata:
  name: epicauth
  namespace: epicauth
spec:
  dnsNames:
  - epicauth
  issuerRef:
    kind: Issuer
    name: selfsigned
  secretName: epicauth

---

apiVersion: v1
kind: ServiceAccount
metadata:
  name: epicauth
  namespace: epicauth
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: contour:authserver:epicauth
rules:
- apiGroups:
  - ""
  resources:
  - secrets
  verbs:
  - get
  - list
  - watch
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: contour:authserver:epicauth
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: contour:authserver:epicauth
subjects:
- kind: ServiceAccount
  name: epicauth
  namespace: epicauth
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: epicauth
  name: epicauth
  namespace: epicauth
spec:
  ports:
  - name: auth
    port: 9443
    protocol: TCP
    targetPort: 9443
  selector:
    app.kubernetes.io/name: epicauth
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: epicauth
  name: epicauth
  namespace: epicauth
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: epicauth
  template:
    metadata:
      labels:
        app.kubernetes.io/name: epicauth
    spec:
      containers:
      - args:
        - htpasswd
        - --address=:9443
        - --tls-ca-path=/tls/ca.crt
        - --tls-cert-path=/tls/tls.crt
        - --tls-key-path=/tls/tls.key
        - --auth-realm=epicauth
        command:
        - /contour-authserver
        image: docker.io/projectcontour/contour-authserver:v2
        imagePullPolicy: IfNotPresent
        name: epicauth
        ports:
        - containerPort: 9443
          name: auth
          protocol: TCP
        resources:
          limits:
            cpu: 100m
            memory: 30Mi
        volumeMounts:
        - mountPath: /tls
          name: tls
          readOnly: true
      serviceAccountName: epicauth
      volumes:
      - name: tls
        secret:
          secretName: epicauth

---
apiVersion: projectcontour.io/v1alpha1
kind: ExtensionService
metadata:
  name: epicauth
  namespace: epicauth
spec:
  protocol: h2
  services:
  - name: epicauth
    port: 9443
