roles/egw/files/egw-operator.yml
---
apiVersion: v1
kind: ServiceAccount
metadata:
  labels:
    app: egw
  name: egw-operator
  namespace: acnodal
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  labels:
    app: egw
  name: egw-operator
rules:
- apiGroups:
  - egw.acnodal.io
  resources:
  - accounts
  - servicegroups
  - serviceprefixes
  - loadbalancers
  verbs:
  - get
  - list
  - watch
- apiGroups:
  - egw.acnodal.io
  resources:
  - loadbalancers
  verbs:
  - update
- apiGroups:
  - k8s.cni.cncf.io
  resources:
  - network-attachment-definitions
  verbs:
  - get
  - create
- apiGroups:
  - apps
  resources:
  - deployments
  verbs:
  - list
  - get
  - create
  - watch
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  labels:
    app: egw
  name: egw-operator
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: egw-operator
subjects:
- kind: ServiceAccount
  name: egw-operator
  namespace: acnodal
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: egw
    component: egw-operator
  name: egw-operator
  namespace: acnodal
spec:
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: egw
      component: egw-operator
  template:
    metadata:
      labels:
        app: egw
        component: egw-operator
    spec:
      imagePullSecrets:
      - name: gitlab
      containers:
      - args:
        image: registry.gitlab.com/acnodal/egw-operator/egw-operator:latest
        imagePullPolicy: Always
        name: egw-operator
        ports:
        - name: http
          containerPort: 8081
          hostPort: 8081
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
        securityContext:
          allowPrivilegeEscalation: true
          readOnlyRootFilesystem: true
          capabilities:
            add:
            - NET_ADMIN
      hostNetwork: true
      serviceAccountName: egw-operator
      terminationGracePeriodSeconds: 0
