roles/egw/files/egw-web-service.yml
---
apiVersion: v1
kind: ServiceAccount
metadata:
  labels:
    app: egw
  name: egw-web-service
  namespace: acnodal
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  labels:
    app: egw
  name: egw-web-service
rules:
- apiGroups:
  - egw.acnodal.io
  resources:
  - accounts
  - servicegroups
  - serviceprefixes
  - loadbalancers
  verbs:
  - get
  - list
  - watch
- apiGroups:
  - egw.acnodal.io
  resources:
  - loadbalancers
  verbs:
  - create
  - update
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  labels:
    app: egw
  name: egw-web-service
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: egw-web-service
subjects:
- kind: ServiceAccount
  name: egw-web-service
  namespace: acnodal
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: egw
    component: web-service
  name: web-service
  namespace: acnodal
spec:
  selector:
    matchLabels:
      app: egw
      component: web-service
  template:
    metadata:
      labels:
        app: egw
        component: web-service
    spec:
      containers:
      - name: web-service
        image: registry.gitlab.com/acnodal/egw-web-service/web-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        securityContext:
          allowPrivilegeEscalation: true
          readOnlyRootFilesystem: true
      imagePullSecrets:
      - name: gitlab
      serviceAccountName: egw-web-service
      terminationGracePeriodSeconds: 0
---
kind: Service
apiVersion: v1
metadata:
  name: web-service
  namespace: acnodal
spec:
  type: NodePort
  ports:
  - port: 8080
    nodePort: 30080
    name: ws
  selector:
    app: egw
    component: web-service
