roles/egw/files/egw-ws-demo.yml
---
apiVersion: v1
kind: ServiceAccount
metadata:
  labels:
    app: egw
  name: egw-web-service
  namespace: acnodal
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: egw
    component: web-service
  name: web-service
  namespace: acnodal
spec:
  selector:
    matchLabels:
      app: egw
      component: web-service
  template:
    metadata:
      labels:
        app: egw
        component: web-service
    spec:
      containers:
      - name: web-service
        image: registry.gitlab.com/acnodal/egw-web-service/web-service:demo-202007151316
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        securityContext:
          allowPrivilegeEscalation: true
          readOnlyRootFilesystem: true
      imagePullSecrets:
      - name: gitlab
      serviceAccountName: egw-web-service
      terminationGracePeriodSeconds: 0
---
kind: Service
apiVersion: v1
metadata:
  name: web-service
  namespace: acnodal
spec:
  type: NodePort
  ports:
  - port: 8080
    nodePort: 30080
  selector:
    app: egw
    component: web-service
