roles/egw/files/envoy-cm.yml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-cm
  namespace: envoy
data:
  envoy.yaml: |-
    admin:
      access_log_path: /tmp/admin_access.log
      address:
        socket_address:
          protocol: TCP
          address: 127.0.0.1
          port_value: 9901
    static_resources:
      listeners:
      - name: listener_0
        address:
          socket_address:
            protocol: TCP
            address: 0.0.0.0
            port_value: 10001
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
              stat_prefix: ingress_http
              route_config:
                name: local_route
                virtual_hosts:
                - name: local_service
                  domains: ["*"]
                  routes:
                  - match:
                      prefix: "/"
                    route:
                      cluster: ego-1
              http_filters:
              - name: envoy.filters.http.router
      clusters:
      - name: ego-1
        connect_timeout: 0.25s
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: ego-1
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: 10.10.0.24
                    port_value: 8080
            - endpoint:
                address:
                  socket_address:
                    address: 10.10.0.26
                    port_value: 8080
            - endpoint:
                address:
                  socket_address:
                    address: 10.10.0.27
                    port_value: 8080
