roles/egw/files/xds-operator.yml
---
apiVersion: v1
kind: ServiceAccount
metadata:
  labels:
    app: egw
  name: xds-operator
  namespace: acnodal
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  labels:
    app: egw
  name: xds-operator
rules:
- apiGroups:
  - egw.acnodal.io
  resources:
  - accounts
  - servicegroups
  - loadbalancers
  verbs:
  - get
  - list
  - watch
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  labels:
    app: egw
  name: xds-operator
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: xds-operator
subjects:
- kind: ServiceAccount
  name: xds-operator
  namespace: acnodal
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: egw
    component: xds-operator
  name: xds-operator
  namespace: acnodal
spec:
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: egw
      component: xds-operator
  template:
    metadata:
      labels:
        app: egw
        component: xds-operator
    spec:
      imagePullSecrets:
      - name: gitlab
      containers:
      - args:
        image: registry.gitlab.com/acnodal/xds-operator/xds-operator:latest
        imagePullPolicy: Always
        name: xds-operator
        ports:
        - name: http
          containerPort: 8080
          hostPort: 8080
        - name: xds
          containerPort: 18000
          hostPort: 18000
        securityContext:
          allowPrivilegeEscalation: true
          readOnlyRootFilesystem: true
      serviceAccountName: xds-operator
      terminationGracePeriodSeconds: 0
---
kind: Service
apiVersion: v1
metadata:
  name: xds-operator
  namespace: acnodal
spec:
  type: NodePort
  ports:
    - port: 18000
      nodePort: 30018
  selector:
    app: egw
    component: xds-operator
